style.css: Fix background and foreground colors
Text that has low contrast is difficult to read, it's or unreadable fo
most users.

Link: https://lore.gnuweeb.org/gwml/20230129114727.33428-2-zxce3@gnuweeb.org
[ammarfaizi2: Rephrase the commit message]

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,7 +10,7 @@
 body {
     font-family: oxygen, sans-serif;
     background: #F0EDE3;
-    color: #33290A;
+    color: #000;
 }
 
 #wrapper {
@@ -56,7 +56,7 @@ body {
 }
 
 #banner li>a {
-    color: #B39223;
+    color: #795E01;
     white-space: nowrap;
     font-size: 90%;
 }
@@ -116,12 +116,12 @@ a:visited {
 }
 
 a:hover {
-    color: #B39223;
+    color: #795E01;
     text-decoration: none;
 }
 
 a:active {
-    color: #B39223;
+    color: #795E01;
     text-decoration: none;
 }
 
@@ -150,7 +150,7 @@ hr {
 #latest {
     float: right;
     background: #FFD133;
-    box-shadow: -0.1em -0.3em 0.5em #B39223 inset;
+    box-shadow: -0.1em -0.3em 0.5em #795E01 inset;
     color: #4C3D00;
     border-radius: 0.5em;
     margin: 1em 2.2em 4em 0;
@@ -208,7 +208,7 @@ hr {
     float: right;
     text-align: center;
     background: #F0EDE3;
-    color: #827A5E;
+    color: #3E3000;
     border: thin solid #CCC8B8;
     box-shadow: 0 0.1em 0.2em #CCC8B8 inset;
     border-radius: 0.5em;
@@ -312,12 +312,12 @@ pre>code {
 }
 
 article h1 {
-    color: #33290A;
+    color: #000;
     margin: 0 0 0.9em 0;
 }
 
 article h1>a {
-    color: #33290A !important;
+    color: #000 !important;
     transition: none;
 }
 
@@ -410,7 +410,7 @@ a.readmore:active {
 #contentinfo {
     clear: both;
     text-align: center;
-    color: #827A5E;
+    color: #3E3000;
     margin: 2em auto;
     padding-top: 0.5em;
 }
